...
                                <rect key="frame" x="0.0" y="603" width="375" height="64"/>
                                <color key="backgroundColor" red="1" green="0.99093163332616485" blue="0.94943918823308093" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="SbE-Sm-uKV"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="25"/>
                                <state key="normal" title="Try it!">
                                    <color key="titleColor" red="0.18823529410000001" green="0.18823529410000001" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <segue destination="AVm-Xa-mUD" kind="show" id="qWX-rn-aGl"/>
                                </connections>
                            </button>
...
                            <constraint firstAttribute="trailing" secondItem="WYg-tJ-GRL" secondAttribute="trailing" constant="16" id="mar-FA-La1"/>
                            <constraint firstItem="PqI-OG-xh4" firstAttribute="top" secondItem="WYg-tJ-GRL" secondAttribute="bottom" id="oJQ-rA-keu"/>
                            <constraint firstItem="PqI-OG-xh4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wsz-qt-sNo"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Aegro App" id="vgl-w7-dEm"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1079.2" y="133.5832083958021"/>
        </scene>
        <!--Palindrome-->
        <scene sceneID="Cij-11-6bo">
            <objects>
                <viewController title="Palindrome" id="AVm-Xa-mUD" customClass="PalindromeTestViewController" customModule="AegroApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="n2Q-G0-K12">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="S2m-Mw-PMh">
                                <rect key="frame" x="32" y="96" width="311" height="131"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Is it palindrome?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iSA-nP-gq7">
                                        <rect key="frame" x="0.0" y="0.0" width="311" height="33"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="28"/>
                                        <color key="textColor" red="1" green="0.9909316333" blue="0.94943918819999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your word here..." textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="DFF-2Z-TSJ">
                                        <rect key="frame" x="0.0" y="49" width="311" height="33"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="spI-h3-GPE">
                                <rect key="frame" x="32" y="251" width="311" height="33"/>
                                <color key="backgroundColor" red="1" green="0.9909316333" blue="0.94943918819999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                <state key="normal" title="Clean">
                                    <color key="titleColor" red="0.18823529410000001" green="0.18823529410000001" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
